<resources>
    <string name="app_name">WalkNavigationApp</string>
    <string name="App_Text">WalK Navigation App</string>
    <string name="text_loading">Loading…</string>
    <string name="btn_walk_navigation">Walk Navigation</string>
    <string name="hint_select_origin">Select Origin</string>
    <string name="hint_select_Destination">Select Destination</string>
    <string name="hint_address">Address</string>
    <string name="label_add_more_addresses">Add More Addresses\n( acts as waypoint)</string>

    <string name="label_additional_addresses">Additional Addresses</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="heading_waypoints">WayPoints</string>
    <string name="prompt_additional_addresses_limit">You can add upto 5 additional addresses</string>

</resources>
