<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        tools:context=".ui.getLocationActivity.GetLocationActivity">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/etOrigin"
            style="@style/text_view_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_medium"
            android:background="@drawable/selector_box"
            android:hint="@string/hint_select_origin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/etDestination"
            style="@style/text_view_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_medium"
            android:background="@drawable/selector_box"
            android:hint="@string/hint_select_Destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etOrigin" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvAdditionalAddresses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_medium"
            android:layout_marginEnd="0dp"
            android:gravity="start"
            android:padding="@dimen/margin_padding_size_tiny"
            android:text="@string/label_additional_addresses"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDestination" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_size_medium"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAdditionalAddresses" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvWayPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_medium"
            android:gravity="center"
            android:padding="@dimen/margin_padding_size_medium"
            android:text="@string/label_add_more_addresses"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnWalkNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_size_medium"
            android:background="@drawable/selector_button"
            android:clickable="true"
            android:enabled="false"
            android:text="@string/btn_walk_navigation"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWayPoints"
            app:layout_constraintVertical_bias="1" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>